--- a/ParallelTypeSystem/ParallelTypeSystem.Data/ParallelTypeSystem.Data.csproj
+++ b/ParallelTypeSystem/ParallelTypeSystem.Data/ParallelTypeSystem.Data.csproj
@@ -42,6 +42,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -59,12 +67,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Files.cs">
+    <Compile Include="DbFactory.cs" />
+    <Compile Include="File.cs">
       <DependentUpon>ParallelTypeModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="FileVersions.cs">
+    <Compile Include="FileVersion.cs">
       <DependentUpon>ParallelTypeModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="IDbFactory.cs" />
     <Compile Include="ParallelTypeModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -80,14 +90,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ParallelTypeModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="PermissionTypes.cs">
+    <Compile Include="PermissionType.cs">
       <DependentUpon>ParallelTypeModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Users.cs">
+    <Compile Include="User.cs">
       <DependentUpon>ParallelTypeModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="UsersFiles.cs">
+    <Compile Include="UsersFile.cs">
       <DependentUpon>ParallelTypeModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
