--- a/ParallelTypeSystem/ParallelTypeSystem.Web/Web.config
+++ b/ParallelTypeSystem/ParallelTypeSystem.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ParallelTypeSystem.Web-20190103013201.mdf;Initial Catalog=aspnet-ParallelTypeSystem.Web-20190103013201;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ParallelTypeSystemEntities" connectionString="metadata=res://*/ParallelTypeModel.csdl|res://*/ParallelTypeModel.ssdl|res://*/ParallelTypeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ParallelTypeSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
