--- a/ParallelTypeSystem/ParallelTypeSystem.Models/ParallelTypeSystem.Models.csproj
+++ b/ParallelTypeSystem/ParallelTypeSystem.Models/ParallelTypeSystem.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDCDEC21-17D9-42BE-9FE7-4B078BE92D3F}</ProjectGuid>
+    <ProjectGuid>{8B1A04E1-86D4-4D9A-8ED7-8DD9DA83FE52}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ParallelTypeSystem.Services</RootNamespace>
-    <AssemblyName>ParallelTypeSystem.Services</AssemblyName>
+    <RootNamespace>ParallelTypeSystem.Models</RootNamespace>
+    <AssemblyName>ParallelTypeSystem.Models</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -53,11 +49,6 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,30 +57,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DomainModels\File.cs" />
+    <Compile Include="DomainModels\FileVersion.cs" />
+    <Compile Include="DomainModels\PermissionType.cs" />
+    <Compile Include="DomainModels\User.cs" />
+    <Compile Include="DomainModels\UsersFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserService.cs" />
+    <Compile Include="DTOs\UserDTO.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ParallelTypeSystem.Common\ParallelTypeSystem.Common.csproj">
       <Project>{2046f1cc-385a-492e-81ba-ab716da5d6af}</Project>
       <Name>ParallelTypeSystem.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ParallelTypeSystem.Data\ParallelTypeSystem.Data.csproj">
-      <Project>{4b873d10-8895-473c-a0d0-34d23bfd39bf}</Project>
-      <Name>ParallelTypeSystem.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ParallelTypeSystem.Interfaces\ParallelTypeSystem.Interfaces.csproj">
-      <Project>{eebaa1c1-c985-4487-b9d6-7c8cf37aaa15}</Project>
-      <Name>ParallelTypeSystem.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ParallelTypeSystem.Models\ParallelTypeSystem.Models.csproj">
-      <Project>{8b1a04e1-86d4-4d9a-8ed7-8dd9da83fe52}</Project>
-      <Name>ParallelTypeSystem.Models</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
