--- a/ParallelTypeSystem/ParallelTypeSystem.Services/ParallelTypeSystem.Services.csproj
+++ b/ParallelTypeSystem/ParallelTypeSystem.Services/ParallelTypeSystem.Services.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DocumentService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
