--- a/ParallelTypeSystem/ParallelTypeSystem.Models/ParallelTypeSystem.Models.csproj
+++ b/ParallelTypeSystem/ParallelTypeSystem.Models/ParallelTypeSystem.Models.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DomainModels\PermissionType.cs" />
     <Compile Include="DomainModels\User.cs" />
     <Compile Include="DomainModels\UsersFile.cs" />
+    <Compile Include="DTOs\FileDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
   </ItemGroup>
