--- a/ParallelTypeSystem/ParallelTypeSystem.Web/ParallelTypeSystem.Web.csproj
+++ b/ParallelTypeSystem/ParallelTypeSystem.Web/ParallelTypeSystem.Web.csproj
@@ -257,6 +257,8 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AddFileViewModel.cs" />
+    <Compile Include="Models\ChangesViewModel.cs" />
+    <Compile Include="Models\DocumentViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -340,7 +342,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Documents\Editor.cshtml" />
-    <Content Include="Views\Documents\ViewAll.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
